Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextUndefined.quorum
class Main
    action Main
        text txt
        txt = cast(text, undefined)
        if txt = undefined
            output "passed"
        end
    end
end