Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerUndefined.quorum
class Main
    action Main
        integer int
        int = cast(integer, undefined)
    end
end